--- a/maquetacion/src/app/app.component.html
+++ b/maquetacion/src/app/app.component.html
@@ -1,187 +1,127 @@
-<!-- SLIDE TOGGLE -->
-<mat-slide-toggle> Slide me! </mat-slide-toggle>
-<!-- CHECKBOX -->
-<mat-checkbox class="example-margin" size="small"> Checked </mat-checkbox>
-<br />
-<!-- SLIDER -->
-<mat-slider size="small" color="accent">
-  <input matSliderThumb />
-</mat-slider>
-<mat-slider>
-  <input matSliderThumb />
-</mat-slider>
-<br />
-<!-- SPINNER -->
-<mat-spinner size="small"></mat-spinner>
-<!-- --EXPANSION PANEL y/o Accordion -->
-<br />
-
-<!-- ---- BUTON GROUP -->
-<br />
-<br />
-<!-- -------BUTTON -->
-<button mat-button [matMenuTriggerFor]="menu">Menu</button>
-<mat-menu size="small" #menu="matMenu">
-  <button size="small" mat-menu-item>Item 1</button>
-  <button size="small" mat-menu-item>Item 2</button>
-</mat-menu>
-<br />
-<!-- -----LISTAS -->
-
-<br />
-<!-- ------------CHIPS -->
-<mat-chip size="small"
-  >One fish
-  <button matChipRemove>
-    <mat-icon>cancel</mat-icon>
-  </button>
-</mat-chip>
-<mat-chip
-  >Two fish
-  <button matChipRemove>
-    <mat-icon>cancel</mat-icon>
-  </button>
-</mat-chip>
-<mat-chip>
-  <img
-    matChipAvatar
-    src="https://material.angular.io/assets/img/examples/shiba1.jpg"
-    alt="Photo of a Shiba Inu"
-  />
-  Dog one
-</mat-chip>
-<mat-chip-option size="small" color="accent" selected
-  >Accent fish</mat-chip-option
->
-<mat-chip-option color="warn">Warn fish</mat-chip-option>
-<br />
-
-<!-- RADIO BUTTON  -->
-<mat-radio-group class="small">
-  <mat-radio-button>Option 1</mat-radio-button>
-  <mat-radio-button>Option 2</mat-radio-button>
-</mat-radio-group>
-<br />
-<button
-  mat-fab
-  color="accent"
-  extended
-  size="small"
-  aria-label="Example icon button with a bookmark icon"
->
-  hola
-  <mat-icon>favorite</mat-icon>
-</button>
-<button
-  mat-fab
-  color="accent"
-  extended
-  size="medium"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>favorite</mat-icon>
-  hola
-</button>
-<button
-  mat-fab
-  color="accent"
-  extended
-  size="large"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>favorite</mat-icon>
-  hola
-</button>
-<button
-  mat-fab
-  size="small"
-  color="accent"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>bookmark</mat-icon>
-</button>
-<button
-  mat-fab
-  color="accent"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>bookmark</mat-icon>
-</button>
-<button
-  mat-fab
-  color="accent"
-  size="large"
-  aria-label="Example icon button with a bookmark icon"
->
-  <mat-icon>bookmark</mat-icon>
-</button>
-<br />
-<mat-form-field appearance="outline" size="small">
-  <mat-label>Fill form field</mat-label>
-  <input matInput placeholder="Placeholder" />
-  <!-- <mat-icon matSuffix size="small">sentiment_very_satisfied</mat-icon>
-  <mat-hint>Hint</mat-hint> -->
-</mat-form-field>
-<br />
-<mat-radio-group aria-label="Select an option">
-  <mat-radio-button size="small" value="1">Option 1</mat-radio-button>
-  <mat-radio-button value="2">Option 2</mat-radio-button>
-</mat-radio-group>
-<br />
-<mat-icon size="small">house</mat-icon>
-<mat-icon size="medium">house</mat-icon>
-<mat-icon size="large">house</mat-icon>
-<br />
-<mat-button-toggle-group size="small" #group="matButtonToggleGroup">
-  <mat-button-toggle value="left" aria-label="Text align left">
-    <mat-icon>format_align_left</mat-icon>
-  </mat-button-toggle>
-  <mat-button-toggle value="center" aria-label="Text align center">
-    <mat-icon>format_align_center</mat-icon>
-  </mat-button-toggle>
-  <mat-button-toggle value="right" aria-label="Text align right">
-    <mat-icon>format_align_right</mat-icon>
-  </mat-button-toggle>
-  <mat-button-toggle value="justify" disabled aria-label="Text align justify">
-    <mat-icon>format_align_justify</mat-icon>
-  </mat-button-toggle>
-</mat-button-toggle-group>
-<br />
-<button mat-raised-button color="accent" size="small">
-  <mat-icon>home</mat-icon>
-  Small
-</button>
-<button mat-raised-button color="accent" size="medium">
-  Medium
-  <mat-icon>home</mat-icon>
-</button>
-<button mat-raised-button size="large" color="accent">
-  <mat-icon>home</mat-icon>
-  Large
-</button>
-<br />
-<mat-list role="list" size="small">
-  <mat-list-item role="listitem"
-    >Item 1
-    <button mat-icon-button color="primary">
-      <mat-icon>home</mat-icon>
+<div class="medio">
+  <mat-accordion>
+    <mat-expansion-panel hideToggle>
+      <mat-expansion-panel-header>
+        <mat-panel-title> This is the expansion title </mat-panel-title>
+        <mat-panel-description>
+          This is a summary of the content
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>This is the primary content of the panel.</p>
+    </mat-expansion-panel>
+    <mat-expansion-panel
+      (opened)="panelOpenState = true"
+      (closed)="panelOpenState = false"
+    >
+      <mat-expansion-panel-header>
+        <mat-panel-title> Self aware panel </mat-panel-title>
+        <mat-panel-description>
+          Currently I am {{ panelOpenState ? "open" : "closed" }}
+        </mat-panel-description>
+      </mat-expansion-panel-header>
+      <p>I'm visible because I am open</p>
+    </mat-expansion-panel>
+  </mat-accordion>
+  <br />
+  <mat-divider></mat-divider>
+  <mat-toolbar color="primary">
+    <button size="medium" mat-icon-button>
+      <mat-icon>menu</mat-icon>
     </button>
-  </mat-list-item>
-  <mat-list-item role="listitem">Item 2</mat-list-item>
-  <mat-list-item role="listitem">Item 3</mat-list-item>
-</mat-list>
-<br />
-<mat-tab-group>
-  <mat-tab label="First"> Content 1 </mat-tab>
-  <mat-tab label="Second"> Content 2 </mat-tab>
-  <mat-tab label="Third"> Content 3 </mat-tab>
-</mat-tab-group>
-<button mat-icon-button size="small" color="primary">
-  <mat-icon>home</mat-icon>
-</button>
-<button mat-icon-button size="medium" color="primary">
-  <mat-icon>home</mat-icon>
-</button>
-<button mat-icon-button size="large" color="primary">
-  <mat-icon>home</mat-icon>
-</button>
+    <span>My App</span>
+    <span class="example-spacer"></span>
+    <button mat-icon-button size="medium">
+      <mat-icon>favorite</mat-icon>
+    </button>
+    <button size="medium" mat-icon-button>
+      <mat-icon>share</mat-icon>
+    </button>
+  </mat-toolbar>
+  <mat-divider></mat-divider>
+  <br />
+  <button mat-raised-button color="primary" size="medium">medium</button>
+  <button size="medium" mat-raised-button color="primary">
+    medium
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <mat-divider></mat-divider>
+  <br />
+  <section class="example-section">
+    <mat-checkbox class="example-margin" size="medium" color="primary"
+      >Check me!</mat-checkbox
+    >
+    <mat-checkbox class="example-margin">Disabled</mat-checkbox>
+  </section>
+  <mat-divider></mat-divider>
+  <mat-chip-option size="medium">One fish</mat-chip-option>
+  <mat-chip size="medium">One fish</mat-chip>
+  <mat-chip size="medium"
+    >One fish<button matChipRemove>
+      <mat-icon>cancel</mat-icon>
+    </button></mat-chip
+  >
+  <mat-divider></mat-divider>
+  <button mat-fab color="primary" size="medium">
+    <mat-icon>cancel</mat-icon>
+  </button>
+  <button mat-fab extended color="primary" size="medium">
+    medium
+    <mat-icon>cancel</mat-icon>
+  </button>
+  <mat-divider></mat-divider>
+  <mat-icon size="medium" color="primary">favorite</mat-icon>
+  <mat-divider></mat-divider>
+  <button mat-icon-button color="primary" size="medium">
+    <mat-icon>favorite</mat-icon>
+  </button>
+  <mat-divider></mat-divider>
+  <mat-list role="list" size="medium">
+    <mat-list-item role="listitem">
+      Item 1
+      <button mat-icon-button>
+        <mat-icon>folder</mat-icon>
+      </button></mat-list-item
+    >
+    <mat-list-item role="listitem">Item 2</mat-list-item>
+    <mat-list-item role="listitem">Item 3</mat-list-item>
+  </mat-list>
+  <mat-divider></mat-divider>
+  <button mat-button [matMenuTriggerFor]="menu">Menu</button>
+  <mat-menu #menu="matMenu" size="medium">
+    <button mat-menu-item>Item 1</button>
+    <button mat-menu-item>Item 2</button>
+  </mat-menu>
+  <mat-spinner></mat-spinner>
+  <mat-radio-button value="2" size="medium">Option 2</mat-radio-button>
+  <table mat-table [dataSource]="dataSource" class="mat-elevation-z8">
+    <!--- Note that these columns can be defined in any order.
+          The actual rendered columns are set as a property on the row definition" -->
+
+    <!-- Position Column -->
+    <ng-container matColumnDef="position">
+      <th mat-header-cell *matHeaderCellDef>No.</th>
+      <td mat-cell *matCellDef="let element">{{ element.position }}</td>
+    </ng-container>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let element">{{ element.name }}</td>
+    </ng-container>
+
+    <!-- Weight Column -->
+    <ng-container matColumnDef="weight">
+      <th mat-header-cell *matHeaderCellDef>Weight</th>
+      <td mat-cell *matCellDef="let element">{{ element.weight }}</td>
+    </ng-container>
+
+    <!-- Symbol Column -->
+    <ng-container matColumnDef="symbol">
+      <th mat-header-cell *matHeaderCellDef>Symbol</th>
+      <td mat-cell *matCellDef="let element">{{ element.symbol }}</td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
+  </table>
+</div>
